Misc bug fixes, refactoring and improvements: Awaiting class for maintaining states for sending commands and receiving responses Fix bugs disconnecting / connecting Add bottom safe area in mobile browser Stop browser scrolling incorrectly when input text focused on mobile Add 2 more levels to Play Computer Refactor virtual scroller code for chat tabs Add virtual scrolling to game list menu (for PGNs) Fix bishop color bug in insufficientMaterial()

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -16,7 +16,7 @@ html, body {
 
 body {
   padding-top: var(--safe-area-inset-top);
-  padding-bottom: var(--safe-area-inset-bottom);
+  padding-bottom: var(--safe-area-inset-bottom, env(safe-area-inset-bottom));
 }
 
 .feature3 {
@@ -209,7 +209,7 @@ body {
 }
 
 .top-panel, .bottom-panel {
-  height: 56px;
+  height: 3.5rem;
   padding-top: 0;
   padding-bottom: 0;
   display: flex;
@@ -387,12 +387,15 @@ body {
 }
 #game-list-dropdown {
   min-width: 100%;
+  max-width: 100vw;
+  width: 1000px;
+}
+#game-list-scroll-container {
+  overflow: auto;
+  max-height: calc(100vh - 300px);
 }
 #game-list-menu {
   padding: 0;
-  overflow: auto;
-  max-height: calc(100vh - 300px);
-  max-width: 100vw;
 }
 
 #move-table {
@@ -745,6 +748,10 @@ body {
 
 #play-computer-modal .modal-dialog {
   max-width: 400px;
+}
+
+#difficulty-selector .form-check {
+  width: 2.5rem;
 }
 
 .tooltip-separator {
